DevOps/14-kubernetes-troubleshooting/manifests/more-issues/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels: {role: client}
spec:
  containers:
    - name: client
      image: busybox:1.36
      command: ["sh", "-c", "sleep 36000"]
      resources:
        requests: {cpu: 5m, memory: 8Mi}
